panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_block_comments_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_block_comments_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_block_comments_2.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `int` @0) (42 `int` @0))
         (return (a~1 `int` @0)))))

----- stderr -----
