panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_char_local_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_char_local_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_char_local_variable.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `char` @0) (truncate `char` @0 (1 `int` @4)))
         (definition (b~3 `char` @1) (truncate `char` @1 (27 `int` @4)))
         (definition (c~4 `char` @2) (truncate `char` @2 (3 `int` @4)))
         (definition (d~5 `char` @3) (truncate `char` @3 (4 `int` @4)))
         (return (sign-extend `int` @4 (b~3 `char` @1))))))

----- stderr -----
