panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_return_42.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_return_42.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_42.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (return (42 `int` @0)))))

----- stderr -----
